--- a/img_desc/templates/img_desc/Q.html
+++ b/img_desc/templates/img_desc/Q.html
@@ -2,7 +2,7 @@
 {% load otree static %}
 
 {% block title %}
-Round {{ player.round_number }} / {{ session.vars.num_rounds }}
+Round {{ player.round_number }} / {{ Constants.num_rounds }}
 {% endblock %}
 
 {% block content %}
@@ -169,4 +169,5 @@ Round {{ player.round_number }} / {{ session.vars.num_rounds }}
 </script>
 
 {% endblock %}
+
 
